apps/homelab-database/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homelab-database
  labels:
    app.kubernetes.io/name: homelab-database
