apps/homelab-database/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: homelab-database
  namespace: homelab-database
  labels:
    app.kubernetes.io/name: homelab-database
    app.kubernetes.io/instance: homelab-database
spec:
  serviceName: homelab-database
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: homelab-database
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homelab-database
    spec:
      serviceAccountName: homelab-database
      containers:
        - name: postgres
          image: postgres:17-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
