apps/homelab-database/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homelab-database
  namespace: homelab-database
  labels:
    app.kubernetes.io/name: homelab-database
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: homelab-database
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
