apps/homelab-database/base/networkpolicy-allow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-db-ingress
  namespace: homelab-database
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: homelab-database
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 5432
