apps/homelab-database/base/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: homelab-database
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
